--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,19 @@
 asgiref==3.8.1
+click==8.1.7
+colorama==0.4.6
 dj-database-url==2.3.0
 Django==5.1.3
+django-background-tasks==1.2.8
+django-debug-toolbar==4.4.6
 django-environ==0.11.2
+gunicorn==23.0.0
+h11==0.14.0
+packaging==24.2
 pillow==11.0.0
 psycopg2-binary==2.9.10
 six==1.16.0
 sqlparse==0.5.2
 typing_extensions==4.12.2
 tzdata==2024.2
+uvicorn==0.32.1
+whitenoise==6.8.2
