--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,8 @@
 databases:
-  - name: project
+  - name: fruitika
     plan: free
-    databaseName: project_db
-    user: project_db_user
+    databaseName: fruitika_db
+    user: fruitika_db_user
 
 services:
   - type: web
@@ -14,7 +14,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: project_db
+          name: fruitika_db
           property: connectionString
       - key: SECRET_KEY
         generateValue: true
